#!/usr/bin/env ruby

# frozen_string_literal: true

# call for instance as:
# ruby ./bin/changelog statemine-v5.0.0
#
# You may set the ENV NO_CACHE to force fetching from Github
# You should also ensure you set the ENV: GITHUB_TOKEN

require_relative '../lib/changelog'
require 'logger'

logger = Logger.new($stdout)
logger.level = Logger::DEBUG
logger.debug('Starting')

owner = 'paritytech'
repo = 'cumulus'

ref1 = ARGV[0]
ref2 = ARGV[1] || 'HEAD'

gh_cumulus = SubRef.new(format('%s/%s', owner, repo))

polkadot_ref1 = gh_cumulus.get_dependency_reference(ref1, 'polkadot-client')
polkadot_ref2 = gh_cumulus.get_dependency_reference(ref2, 'polkadot-client')

substrate_ref1 = gh_cumulus.get_dependency_reference(ref1, 'sp-io')
substrate_ref2 = gh_cumulus.get_dependency_reference(ref2, 'sp-io')

logger.debug('Polkadot from:   ' + polkadot_ref1)
logger.debug('Polkadot to:     ' + polkadot_ref2)

logger.debug('Substrate from:  ' + substrate_ref1)
logger.debug('Substrate to:    ' + substrate_ref2)

cumulus_data = 'cumulus.json'
substrate_data = 'substrate.json'
polkadot_data = 'polkadot.json'

logger.debug('Using CUMULUS:   ' + cumulus_data)
logger.debug('Using SUBSTRATE: ' + substrate_data)
logger.debug('Using POLKADOT:  ' + polkadot_data)

logger.warn('NO_CACHE set') if ENV['NO_CACHE']

# This is acting as cache so we don't spend time querying while testing
if ENV['NO_CACHE'] || !File.file?(cumulus_data)
  logger.debug(format('Fetching data for Cumulus into %s', cumulus_data))
  cmd = format('changelogerator %s/%s -f %s -t %s > %s', owner, repo, ref1, ref2, cumulus_data)
  system(cmd)
else
  logger.debug('Re-using:' + cumulus_data)
end

if ENV['NO_CACHE'] || !File.file?(polkadot_data)
  logger.debug(format('Fetching data for Polkadot into %s', polkadot_data))
  cmd = format('changelogerator %s/%s -f %s -t %s > %s', owner, 'polkadot', polkadot_ref1, polkadot_ref2,
               polkadot_data)
  system(cmd)
else
  logger.debug('Re-using:' + polkadot_data)
end
