@@ -1,9 +1,5 @@
 RUST_STABLE="1.55.0 (c8dfcfe04 2021-09-06)"
 RUST_NIGHTLY="1.57.0-nightly (51e514c0f 2021-09-12)"
-OWNER=paritytech
-REPO=polkadot
-REF1=v0.9.10
-REF2=v0.9.11
 PRE_RELEASE=true
 HIDE_SRTOOL_ROCOCO=true
 HIDE_SRTOOL_SHELL=true
