@@ -2,16 +2,16 @@
 ### Client
 
 {#- The changes are sorted by merge date #}
-{%- for pr in cumulus.changes | sort(attribute="merged_at") %}
+{%- for pr in changes | sort(attribute="merged_at") %}
 
-{%- if pr.meta.B  %}
-{%- if pr.meta.B.value == 0 %}
-{#- We skip silent ones -#}
-{%- else -%}
+{%- if pr.meta.B %}
+    {%- if pr.meta.B.value == 0 %}
+    {#- We skip silent ones -#}
+    {%- else -%}
 
-{%- if pr.meta.B.value == 5 %}
-- {{ m_c::change(c=pr) }}
-{%- endif -%}
-{% endif -%}
-{% endif -%}
+        {%- if pr.meta.B.value == 5 %}
+- {{ m_c::change(c=pr) }} {{ pr.meta.B | json_encode }}
+        {%- endif -%}
+    {% endif -%}
+    {% endif -%}
 {% endfor %}
