@@ -4,9 +4,6 @@
 
 This release contains the changes between `{{ env.REF1 }}` and `{{ env.REF2 }}`.
 
-IMPORTANT: The following release notes currently only concern the changes introduced
-in the cumulus repo. Please refer as well to the changes in the matching Polkadot release.
-
 {%- set changes = cumulus.changes | concat(with=substrate.changes) -%}
 {%- set changes = changes | concat(with=polkadot.changes) -%}
 
